# smart_messaging_core

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
docs/http/: README.md
docs/kafka/: README.md
docs/mqtt/: README.md
docs/redis/: README.md
scripts/: test_http_publish.py  test_kafka_pubsub.py  test_mqtt_pubsub.py  test_redis_pubsub.py
src/smart_messaging_core/: __init__.py  base.py  client.py  registry.py
src/smart_messaging_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/smart_messaging_core/protocols/: __init__.py  http.py  kafka.py  mqtt.py  redis.py
tests/: test_client_routes.py  test_imports.py  test_protocol_validation.py
